fix: make authorize persona address signed by nakama (#356)
